<resources>
    <string name="app_name">Mutwits</string>
  <string name="sign_in_with_twitter">Sign in with Twitter</string>
  <string name="user_profile_image">User profile image</string>
  <string name="search_twitter">Search Twitter</string>
  <string name="add">Add</string>
  <string name="create_a_list_using_the_following">Create a list of people to mute/unmute by importing muted users on Twitter or by creating it manually</string>
  <string name="create">Create</string>
  <string name="import_str">Import</string>
  <string name="selected_user">selected user</string>
  <string name="remove">Remove</string>
  <string name="view">VIEW</string>
  <string name="sign_out">Sign out</string>
  <string name="save">Save</string>
  <string name="loading">Loading…</string>
	<string name="friends">Friends</string>
  <string name="muted">Muted</string>

  <plurals name="usersToBeAdded">
    <item quantity="one">%d user to be added</item>
    <item quantity="few">%d users to be added</item>
    <item quantity="other">%d users to be added</item>
  </plurals>

  <plurals name="usersToBeRemoved">
    <item quantity="one">%d user to be removed</item>
    <item quantity="few">%d users to be removed</item>
    <item quantity="other">%d users to be removed</item>
  </plurals>
</resources>
