<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="32dp">

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/materialTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/create_a_list_using_the_following"
    app:layout_constraintBottom_toTopOf="@+id/btnImport"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btnImport"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/import_str"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btnManual"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/materialTextView"
    app:strokeColor="@color/colorPrimary" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btnManual"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="@+id/btnImport"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/btnImport"
    app:layout_constraintTop_toTopOf="@+id/btnImport" />

</androidx.constraintlayout.widget.ConstraintLayout>

